Correct alignment of the X button on dismissable alerts.

--- a/web/pgadmin/static/css/bootstrap.overrides.css
+++ b/web/pgadmin/static/css/bootstrap.overrides.css
@@ -1341,3 +1341,8 @@ body {
 .override_label_class_font_size {
   font-size: inherit !important;
 }
+
+/* To align 'X' in alert on login page */
+.alert-dismissable, .alert-dismissible {
+  padding-right: 35px !important;
+}
